--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "pg": "^8.2.1",
     "sequelize": "^6.2.3",
     "sequelize-cli": "^6.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
